[package]
name = "primeflex-language-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
serde_json = "1.0.108"
serde = { version = "1.0.192", features = ["derive"] }
crossbeam-channel = "0.5.8"
lsp-types = "=0.95"
lsp-server = "0.7.6"

[dev-dependencies]
ctrlc = "3.4.1"
